# django-base

./: .gitignore  Procfile  pyproject.toml  requirements.txt
authy/: managers.py  models.py  serializers.py  services.py  urls.py  views.py
authy/helpers/: token_helper.py
authy/migrations/: 0001_initial.py
authy/test/: test_integration.py
cloud_storage/: get_cloud_storage_client.py  idrive_client.py
cloud_storage/constants/: file_upload_constants.py
common/: models.py  pagination.py  serializers.py  services.py  types.py  urls.py  views.py
common/custom_exceptions/: custom_exception.py
common/exception_handling/: custom_exception_handler.py  exception_handler_mapper.py
common/middlewares/: global_context_middleware.py  swagger_middleware.py
common/migrations/: 0001_initial.py  0002_initial.py
common/model_managers/: ordered_managers.py
common/permissions/: generic_permissions.py
common/response/: view_response.py
communications/clients/: sms.py  (+1 more)
contact_verification/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
custom_test/: base_test.py
manage/: asgi.py  urls.py  wsgi.py
payment/: constants.py  models.py  permissions.py  serializers.py  services.py  signals.py  types.py  urls.py  views.py
settings/: __init__.py  base.py  development.py  local_test.py  prod.py  test.py
subscription/: apps.py  handlers.py  models.py  types.py
user/: models.py  permissions.py  serializers.py  services.py  types.py  urls.py  views.py
utils/: built_in_overrides.py  converters.py  date.py  fields.py  generators.py  operations.py
(+24 files in other folders)
