[tool.poetry]
name = "my_app"
version = "0.1.0"
description = ""
authors = ["alperbilgic <alper@palnea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "4.2.11"
dj-database-url = "^2.1.0"
django-environ = "^0.11.2"
black = "^24.3.0"
djangorestframework = "^3.15.1"
django-soft-delete = "^1.0.12"
django-phonenumber-field = "^7.3.0"
djangorestframework-simplejwt = "^5.3.1"
structlog = "^24.1.0"
django-cors-headers = "^4.3.1"
python-dateutil = "^2.9.0.post0"
psycopg2-binary = "^2.9.9"
django-phonenumbers = "^1.0.1"
boto3 = "^1.34.79"
httpx = "^0.27.0"
py-moneyed = "^3.0"
model-bakery = "^1.17.0"
mock = "^5.1.0"
pytz = "^2024.1"
django-filter = "^24.2"
google-api-python-client = "^2.125.0"
oauth2client = "^4.1.3"
pyOpenSSL = "^24.1.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
langcodes = "^3.4.0"
pycountry = "^24.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
